--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <ul id="output"></ul>
-
+    <canvas id="myCanvas" width='300' height="300" style="border:1px solid #000000;">
+    </canvas>
     <script src="/bundle.js"></script>
 </body>
 </html>
